# PirateHunter

./: .env.example  .gitignore  DELIVERABLES.md  Makefile  PHASE6_BUILD.md  README.md  alembic.ini  create_tables.py  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt  setup_venv.ps1  test_browser_ws.js  test_ws.py
alembic/: env.py
alembic/versions/: 20260428_0001_phase2_persistence.py  20260428_0002_phase3_agents.py  20260428_0003_phase4_verification.py
dashboard/: .env.local  .env.local.example  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
dashboard/.next/: trace
dashboard/.next/server/: server-reference-manifest.json  webpack-runtime.js
dashboard/app/: layout.tsx  page.tsx
dashboard/components/: EventFeed.tsx  Globe.tsx  RevenueLossTicker.tsx  TakedownFunnel.tsx
dashboard/lib/: api.ts  store.ts  types.ts  ws.ts
dashboard/styles/: globals.css
scripts/: demo.py  simulate_dashboard.py
src/piratehunt/: __init__.py  cli.py  config.py
src/piratehunt/agents/: __init__.py  __main__.py  base.py  candidate_consumer.py  orchestrator.py  types.py
src/piratehunt/api/: app.py  dependencies.py  main.py
src/piratehunt/db/: __init__.py  engine.py  models.py  repository.py
src/piratehunt/dmca/: __init__.py  __main__.py  generator.py  rights_holders.py  tracker.py  types.py  worker.py
src/piratehunt/fingerprint/: __init__.py  audio.py  extractor.py  types.py  visual.py
src/piratehunt/index/: __init__.py  audio_store.py  faiss_store.py
src/piratehunt/ingestion/: __init__.py  __main__.py  events.py  producer.py  worker.py
tests/: conftest.py  test_api.py  test_audio_fingerprint.py  test_audio_similarity.py  test_audio_store.py  test_candidate_consumer.py  test_discovery_api.py  test_dmca_generator.py  test_dmca_templates.py  test_dmca_tracker.py  test_dmca_worker.py  test_evidence.py  test_extractor.py  test_faiss_store.py  test_gemini_vision.py  test_ingestion_worker.py  test_match_api.py  test_mock_agents.py  test_orchestrator.py  test_repository.py  test_rights_holders_api.py  test_sampler.py  test_scoring.py  test_takedowns_api.py  test_verification_api.py  test_verification_worker.py  test_visual_fingerprint.py
tests/fixtures/: README.md  mock_discord_servers.yaml  mock_iptv_sites.yaml  mock_reddit_posts.yaml  mock_telegram_channels.yaml
(+89 files in other folders)
